--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"react-native-parallax-scroll-view": "^0.20.1",
 		"react-native-scrollable-tab-view": "^0.8.0",
 		"react-native-splash-screen": "^3.0.1",
+		"react-native-star-rating": "^1.0.8",
 		"react-native-swiper": "^1.5.13",
 		"react-native-tab-navigator": "^0.3.4",
+		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.15"
 	},
 	"devDependencies": {
