--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"prop-types": "^15.6.0",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-device-info": "^0.12.1",
 		"react-native-parallax-scroll-view": "^0.20.1",
+		"react-native-root-toast": "^2.2.0",
 		"react-native-scrollable-tab-view": "^0.8.0",
 		"react-native-splash-screen": "^3.0.1",
 		"react-native-star-rating": "^1.0.8",
