--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
 		"prop-types": "^15.6.0",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-check-box": "^2.0.2",
 		"react-native-device-info": "^0.12.1",
 		"react-native-parallax-scroll-view": "^0.20.1",
 		"react-native-root-toast": "^2.2.0",
 		"react-native-scrollable-tab-view": "^0.8.0",
 		"react-native-splash-screen": "^3.0.1",
 		"react-native-star-rating": "^1.0.8",
+		"react-native-storage": "^0.2.2",
 		"react-native-swiper": "^1.5.13",
 		"react-native-tab-navigator": "^0.3.4",
 		"react-native-vector-icons": "^4.4.2",
